add_definitions(-DSPI_MPU9250)
cmake_minimum_required(VERSION 3.10)
set(CMAKE_C_COMPILER "/usr/bin/gcc")
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
find_library(wiringPi_LIB wiringPi)
add_executable(MPU "main.cpp"  "main.hpp")
target_link_libraries(9250${wiringPi_LIB})
